--- a/pt-1firstcommit.html
+++ b/pt-1firstcommit.html
@@ -12,12 +12,10 @@ my first commit.
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet.css" href="pt-1firstcommit.css">
 </head>
 <body>
-  
-</body>
-</html>
-<h1>Jane Doe</h1>
+  <h1>Jane Doe</h1>
 <div class="job-title">Web Developer</div>
 <p>
   Far far away, behind the word mountains, far from the countries Vokalia and
@@ -32,8 +30,12 @@ my first commit.
 </p>
 
 <h2>Contact information</h2>
-<ul>
-  <li>Email: <a href="mailto:jane@example.com">jane@example.com</a></li>
-  <li>Web: <a href="http://example.com">http://example.com</a></li>
-  <li>Tel: 123 45678</li>
-</ul>
+    <div class="contact-box">
+        <ul>
+            <li>Email: <a href="mailto:jane@example.com" class="email">jane@example.com</a></li>
+            <li>Web: <a href="http://example.com" class="website">http://example.com</a></li>
+            <li>Tel: 123 45678</li>
+        </ul> 
+    </div>
+</body>
+</html>
